--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <img src="assets/images/AvonCarWashLogo.JPG" alt="Avon Splash Car Wash Logo">
+                <img src="assets/images/AvonCarWashLogo.jpg" alt="Avon Splash Car Wash Logo">
                 <span class="logo-text">Avon Splash Car Wash</span>
             </div>
             <ul class="nav-menu">
